переделывает цвета по макету, меняет переменные и глобальные стили

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,7 +34,7 @@
     <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
     <script src="../node_modules/pixel-glass/script.js"></script>
   -->
-  <h1 class="visually-hidden">Каталог здорового питания Кэт-энерджи</h1>
+  <h1 class="page__hidden">Каталог здорового питания Кэт-энерджи</h1>
 
   <section class="catalog page__centerer">
     <h2 class="catalog__title">Каталог продукции</h2>
@@ -235,7 +235,7 @@
       </ul>
 
       <aside class="stock">
-        <h2 class="visually-hidden">Акция от магазина Кэт-энерджи</h2>
+        <h2 class="page__hidden">Акция от магазина Кэт-энерджи</h2>
         <p class="stock__description">Закажите все <br> и получите чехол для кота в подарок!</p>
       </aside>
     </div>
