--- a/source/form.html
+++ b/source/form.html
@@ -41,7 +41,7 @@
   <form class="form" action="https://echo.htmlacademy.ru/" method="post">
     <div class="form__section">
       <fieldset class="form-group form-group--cat-info">
-        <legend class="visually-hidden">Информация о Вашем котике</legend>
+        <legend class="page__hidden">Информация о Вашем котике</legend>
         <ul class="form-group__list form-group__list--cat-info">
           <li class="form-group__item">
             <label class="form-group__label" for="cat-name">Имя:*</label>
@@ -61,20 +61,20 @@
       </fieldset>
 
       <fieldset class="form-group form-group--purpose">
-        <legend class="visually-hidden">Цель программы</legend>
+        <legend class="page__hidden">Цель программы</legend>
         <ul class="form-group__list form-group__list--purpose">
           <li class="form-group__item form-group__item--radio">
-            <input class="form-group__radio visually-hidden" id="radio-1" type="radio" name="purpose-radio"
+            <input class="form-group__radio page__hidden" id="radio-1" type="radio" name="purpose-radio"
               value="slimming" checked>
             <label class="form-group__label form-group__label--radio" for="radio-1">Похудение</label>
           </li>
           <li class="form-group__item">
-            <input class="form-group__radio visually-hidden" id="radio-2" type="radio" name="purpose-radio"
+            <input class="form-group__radio page__hidden" id="radio-2" type="radio" name="purpose-radio"
               value="fatting">
             <label class="form-group__label form-group__label--radio" for="radio-2">Набор массы</label>
           </li>
           <li class="form-group__item">
-            <input class="form-group__radio visually-hidden" id="radio-3" type="radio" name="purpose-radio"
+            <input class="form-group__radio page__hidden" id="radio-3" type="radio" name="purpose-radio"
               value="need-help">
             <label class="form-group__label form-group__label--radio" for="radio-3">Не знаю (Нужен ваш совет)</label>
           </li>
@@ -102,7 +102,7 @@
       <legend class="form-group__legend form-group__legend--comment">Комментарий</legend>
       <ul class="form-group__list">
         <li class="form-group__item">
-          <label class="visually-hidden" for="person-comment">Расскажите обо всех повАдках кота</label>
+          <label class="page__hidden" for="person-comment">Расскажите обо всех повАдках кота</label>
           <textarea class="form-group__input form-group__input--comment" name="person-comment" id="person-comment"
             placeholder="Расскажите обо всех повАдках кота"></textarea>
         </li>
@@ -113,19 +113,19 @@
       <legend class="form-group__legend form-group__legend--add ">Дополнительно</legend>
       <ul class="form-group__list form-group__list--add">
         <li class="form-group__item form-group__item--checkbox">
-          <input class="form-group__checkbox visually-hidden" type="checkbox" name="sweetener" id="checkbox-1" checked>
+          <input class="form-group__checkbox page__hidden" type="checkbox" name="sweetener" id="checkbox-1" checked>
           <label class="form-group__label form-group__label--checkbox" for="checkbox-1">Сахарозаменитель</label>
         </li>
         <li class="form-group__item form-group__item--checkbox">
-          <input class="form-group__checkbox visually-hidden" type="checkbox" name="water" id="checkbox-2">
+          <input class="form-group__checkbox page__hidden" type="checkbox" name="water" id="checkbox-2">
           <label class="form-group__label form-group__label--checkbox" for="checkbox-2">Питьевая вода</label>
         </li>
         <li class="form-group__item form-group__item--checkbox">
-          <input class="form-group__checkbox visually-hidden" type="checkbox" name="milk" id="checkbox-3">
+          <input class="form-group__checkbox page__hidden" type="checkbox" name="milk" id="checkbox-3">
           <label class="form-group__label form-group__label--checkbox" for="checkbox-3">Молоко</label>
         </li>
         <li class="form-group__item form-group__item--checkbox">
-          <input class="form-group__checkbox visually-hidden" type="checkbox" name="vitamins" id="checkbox-4">
+          <input class="form-group__checkbox page__hidden" type="checkbox" name="vitamins" id="checkbox-4">
           <label class="form-group__label form-group__label--checkbox" for="checkbox-4">Витамины</label>
         </li>
       </ul>
