--- a/source/index.html
+++ b/source/index.html
@@ -47,7 +47,7 @@
 </article>
 
 <article class="health-programs page__centerer">
-  <h2 class="visually-hidden">Программы здорового питания для Вашего котика</h2>
+  <h2 class="page__hidden">Программы здорового питания для Вашего котика</h2>
   <section class="program program--slim">
     <h3 class="program__title program__title--slim">Похудение</h3>
     <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
@@ -111,7 +111,7 @@
         <img class="cats-static" src="img/index_cat-slider@1x.png" width="592" height="511"
           alt="слайдер в половинном состоянии.">
       </div>
-      <div class="demo-slider__cat demo-slider__cat--after visually-hidden">
+      <div class="demo-slider__cat demo-slider__cat--after page__hidden">
         <img class="cat-skinny" src="img/slider_cat-skinny.png" width="243" height="232"
           alt="кот после курса cat-energy.">
       </div>
@@ -121,7 +121,7 @@
         <div class="control__scale">
           <div class="control__bar">
             <button class="control__range">
-              <span class="visually-hidden">Кнопка слайдера</span>
+              <span class="page__hidden">Кнопка слайдера</span>
             </button>
           </div>
         </div>
