правит блок контактов в карте, делает мелкие декоративные элементы, правит замечания

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -201,7 +201,7 @@
     </ul>
   </section>
 
-  <section class="addons">
+  <section class="addons page__centerer">
     <h2 class="addons__title">Дополнительные товары</h2>
     <div class="addons-container page__centerer">
       <ul class="extra">
