--- a/source/index.html
+++ b/source/index.html
@@ -89,11 +89,11 @@
         <ul class="demo-cat__list">
           <li class="demo-cat__item">
             <b class="demo-cat__importance">5 кг</b>
-            <p class="demo-cat__description">снижение <br> веса</p>
+            <p class="demo-cat__description">снижение веса</p>
           </li>
           <li class="demo-cat__item">
             <b class="demo-cat__importance">60 дней</b>
-            <p class="demo-cat__description">затрачено <br> времени</p>
+            <p class="demo-cat__description">затрачено времени</p>
           </li>
         </ul>
         <div class="demo-cat__total">
