доделывает мелкие декоративные элементы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -203,7 +203,7 @@
 
   <section class="addons page__centerer">
     <h2 class="addons__title">Дополнительные товары</h2>
-    <div class="addons-container page__centerer">
+    <div class="addons-container">
       <ul class="extra">
         <li class="extra__item">
           <h3 class="extra__title">Сахарозаменитель</h3>
