--- a/source/index.html
+++ b/source/index.html
@@ -105,14 +105,14 @@
 
     <div class="demo-slider">
       <div class="demo-slider__cat demo-slider__cat--before">
-        <img class="cat-fat" src="img/slider_cat-fat.png" width="280" height="232" alt="кот до курса cat-energy.">
+        <img class="cat-fat" src="img/cat-fat-s@1x.png" width="280" height="232" alt="кот до курса cat-energy.">
       </div>
       <div class="demo-slider__cat demo-slider__cat--static">
-        <img class="cats-static" src="img/index_cat-slider@1x.png" width="592" height="511"
+        <img class="cats-static" src="img/cat-slider@1x.png" width="592" height="511"
           alt="слайдер в половинном состоянии.">
       </div>
       <div class="demo-slider__cat demo-slider__cat--after page__hidden">
-        <img class="cat-skinny" src="img/slider_cat-skinny.png" width="243" height="232"
+        <img class="cat-skinny" src="img/cat-skinny-s@1x.png" width="243" height="232"
           alt="кот после курса cat-energy.">
       </div>
 
