--- a/source/index.html
+++ b/source/index.html
@@ -36,10 +36,19 @@
   -->
 
 <article class="promo-container">
+
   <div class="promo page__centerer">
     <h1 class="promo__title">Функциональное питание для&nbsp;котов</h1>
     <p class="promo__text">Занялся собой? Займись котом!</p>
-    <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
+    <picture>
+      <source type="image/webp" media="(min-width: 1280px)" srcset="img/index-can-l@1x.webp 1x, img/index-can-l@2x.webp 2x">
+      <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-m@1x.webp 1x, img/index-can-m@2x.webp 2x">
+      <source type="image/webp" srcset="img/index-can@1x.webp 1x, img/index-can@2x.webp 2x">
+      <source media="(min-width: 1280px)" srcset="img/index-can-l@1x.png 1x, img/index-can-l@2x.png 2x">
+      <source media="(min-width: 768px)" srcset="img/index-can-m@1x.png 1x, img/index-can-m@2x.png 2x">
+      <img class="promo__image" src="img/index-can@1x.png" srcset="img/index-can@2x.png" width="280" height="270"
+        alt="упаковка питания Cat Energy.">
+    </picture>
     <div class="promo__link">
       <a class="main-link main-link--smaller-text" href="form.html">Подобрать программу</a>
     </div>
