--- a/source/index.html
+++ b/source/index.html
@@ -41,13 +41,15 @@
     <h1 class="promo__title">Функциональное питание для&nbsp;котов</h1>
     <p class="promo__text">Занялся собой? Займись котом!</p>
     <picture>
-      <source type="image/webp" media="(min-width: 1280px)" srcset="img/index-can-l@1x.webp 1x, img/index-can-l@2x.webp 2x">
-      <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-m@1x.webp 1x, img/index-can-m@2x.webp 2x">
-      <source type="image/webp" srcset="img/index-can@1x.webp 1x, img/index-can@2x.webp 2x">
+      <source type="image/webp" media="(min-width: 1280px)"
+        srcset="img/index-can-l@1x.webp 1x, img/index-can-l@2x.webp 2x">
+      <source type="image/webp" media="(min-width: 768px)"
+        srcset="img/index-can-m@1x.webp 1x, img/index-can-m@2x.webp 2x">
+      <source type="image/webp" srcset="img/index-can-s@1x.webp 1x, img/index-can-s@2x.webp 2x">
       <source media="(min-width: 1280px)" srcset="img/index-can-l@1x.png 1x, img/index-can-l@2x.png 2x">
       <source media="(min-width: 768px)" srcset="img/index-can-m@1x.png 1x, img/index-can-m@2x.png 2x">
-      <img class="promo__image" src="img/index-can@1x.png" srcset="img/index-can@2x.png" width="280" height="270"
-        alt="упаковка питания Cat Energy.">
+      <img class="promo__image" src="img/index-can-s@1x.png 1x" srcset="img/index-can-s@2x.png 2x" width="280"
+        height="270" alt="упаковка питания Cat Energy.">
     </picture>
     <div class="promo__link">
       <a class="main-link main-link--smaller-text" href="form.html">Подобрать программу</a>
@@ -114,11 +116,15 @@
 
     <div class="demo-slider">
       <div class="demo-slider__cat demo-slider__cat--before">
-        <img class="cat-fat" src="img/cat-fat-s@1x.png" width="280" height="232" alt="кот до курса cat-energy.">
+          <img class="cat-fat" src="img/cat-fat-s@1x.png 1x" srcset="img/cat-fat-s@2x.png 2x" width="280" height="232"
+            alt="кот до курса cat-energy.">
       </div>
       <div class="demo-slider__cat demo-slider__cat--static">
-        <img class="cats-static" src="img/cat-slider@1x.png" width="592" height="511"
+        <picture>
+          <source type="image/webp" media="(min-width: 1280px)" srcset="img/cat-slider@1x.webp 1x, img/cat-slider@2x.webp 2x">
+          <img class="cats-static" src="img/cat-slider@1x.png 1x" srcset="img/cat-slider@2x.png 2x" width="592" height="511"
           alt="слайдер в половинном состоянии.">
+        </picture>
       </div>
       <div class="demo-slider__cat demo-slider__cat--after page__hidden">
         <img class="cat-skinny" src="img/cat-skinny-s@1x.png" width="243" height="232"
