--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,7 +40,7 @@
     <h2 class="catalog__title">Каталог продукции</h2>
     <ul class="catalog__products">
       <li class="product-block">
-        <img class="product-block__image product-block__image--small" src="img/catalog/chicken_s-s@1x.png" width="68" height="78" alt="">
+        {{ macros.picture("product-block__image product-block__image--small", "chicken_s", "png", "./img/catalog/", "Cat Energy Pro 500г с курицей", "68", "78") }}
         <div class="product">
           <h3 class="product__title">Cat Energy Pro 500&nbsp;г</h3>
           <ul class="product__list">
@@ -62,7 +62,7 @@
       </li>
 
       <li class="product-block">
-        <img class="product-block__image product-block__image--big" src="img/catalog/chicken_xl-s@1x.png" width="84" height="100" alt="">
+        {{ macros.picture("product-block__image product-block__image--big", "chicken_xl", "png", "./img/catalog/", "Cat Energy Pro 1000г с курицей", "84", "100") }}
         <div class="product">
           <h3 class="product__title">Cat Energy Pro 1000&nbsp;г</h3>
           <ul class="product__list">
@@ -84,7 +84,7 @@
       </li>
 
       <li class="product-block">
-        <img class="product-block__image product-block__image--small" src="img/catalog/fish_s-s@1x.png" width="68" height="78" alt="">
+        {{ macros.picture("product-block__image product-block__image--small", "fish_s", "png", "./img/catalog/", "Cat Energy Pro 500г с рыбой", "68", "78") }}
         <div class="product">
           <h3 class="product__title">Cat Energy Pro 500&nbsp;г</h3>
           <ul class="product__list">
@@ -106,7 +106,7 @@
       </li>
 
       <li class="product-block">
-        <img class="product-block__image product-block__image--big" src="img/catalog/fish_xl-s@1x.png" width="84" height="100" alt="">
+        {{ macros.picture("product-block__image product-block__image--big", "fish_xl", "png", "./img/catalog/", "Cat Energy Pro 1000г с рыбой", "84", "100") }}
         <div class="product">
           <h3 class="product__title">Cat Energy Pro 1000&nbsp;г</h3>
           <ul class="product__list">
@@ -128,7 +128,7 @@
       </li>
 
       <li class="product-block">
-        <img class="product-block__image product-block__image--small" src="img/catalog/buckwheat_s-s@1x.png" width="68" height="78" alt="">
+        {{ macros.picture("product-block__image product-block__image--small", "buckwheat_s", "png", "./img/catalog/", "Cat Energy Pro 500г с гречкой", "68", "78") }}
         <div class="product">
           <h3 class="product__title">Cat Energy Slim 500&nbsp;г</h3>
           <ul class="product__list">
@@ -150,7 +150,7 @@
       </li>
 
       <li class="product-block">
-        <img class="product-block__image product-block__image--big" src="img/catalog/buckwheat_xl-s@1x.png" width="84" height="100" alt="">
+        {{ macros.picture("product-block__image product-block__image--big", "buckwheat_xl", "png", "./img/catalog/", "Cat Energy Pro 1000г с гречкой", "84", "100") }}
         <div class="product">
           <h3 class="product__title">Cat Energy Slim 1000&nbsp;г</h3>
           <ul class="product__list">
@@ -172,7 +172,7 @@
       </li>
 
       <li class="product-block">
-        <img class="product-block__image product-block__image--small" src="img/catalog/rice_s-s@1x.png" width="68" height="78" alt="">
+        {{ macros.picture("product-block__image product-block__image--small", "rice_s", "png", "./img/catalog/", "Cat Energy Pro 500г с рисом", "68", "78") }}
         <div class="product">
           <h3 class="product__title">Cat Energy Slim 500&nbsp;г</h3>
           <ul class="product__list">
