--- a/source/form.html
+++ b/source/form.html
@@ -65,7 +65,7 @@
         <ul class="form-group__list form-group__list--purpose">
           <li class="form-group__item form-group__item--radio">
             <input class="form-group__radio page__hidden" id="radio-1" type="radio" name="purpose-radio"
-              value="slimming" checked>
+              value="slimming" checked  disabled>
             <label class="form-group__label form-group__label--radio" for="radio-1">Похудение</label>
           </li>
           <li class="form-group__item">
