правка лого академии и input_error

--- a/source/form.html
+++ b/source/form.html
@@ -38,6 +38,8 @@
   <h1 class="main-form__title">Подбор программы</h1>
   <p class="main-form__description">Заполните анкету, и мы подберем <br> программу питания для вашего кота</p>
 
+  {# стилизация input при вводе ошибочных данных - form-group__input--error #}
+
   <form class="form" action="https://echo.htmlacademy.ru/" method="post">
     <div class="form__section">
       <fieldset class="form-group form-group--cat-info">
