--- a/source/index.html
+++ b/source/index.html
@@ -105,29 +105,31 @@
       </div>
     </div>
 
-    <div class="demo-slider">
-      <div class="demo-slider__cat demo-slider__cat--before">
-        <img class="cat-fat" src="img/cat-fat-s@1x.png" srcset="./img/cat-fat-s@2x.png" width="280" height="232" alt="кот до курса cat-energy.">
-      </div>
-      <div class="demo-slider__cat demo-slider__cat--static">
-        <picture>
-          <source type="image/webp" media="(min-width: 1280px)" srcset="./img/cat-slider@1x.webp 1x, img/cat-slider@2x.webp 2x">
-          <img class="cats-static" src="img/cat-slider@1x.png" srcset="./img/cat-slider@2x.png" width="592" height="511" alt="слайдер в половинном состоянии.">
-        </picture>
-      </div>
-      <div class="demo-slider__cat demo-slider__cat--after page__hidden">
-        <img class="cat-skinny" src="img/cat-skinny-s@1x.png" width="243" height="232"
-          alt="кот после курса cat-energy.">
+
+    <div class="slider">
+      <div class="slider__images">
+        <div class="slider__image-wrapper slider__image-wrapper--before slider__image-wrapper--active">
+          <picture>
+            <source media="(min-width: 768px)" srcset="img/cat-fat-l@1x.png 1x, img/cat-fat-l@1x.png 2x">
+            <img class="slider__image  slider__image--before" src="img/cat-fat-s@1x.png"
+              srcset="img/cat-fat-s@1x.png 2x" alt="кот до курса cat-energy.">
+          </picture>
+        </div>
+        <div class="slider__image-wrapper slider__image-wrapper--after">
+          <picture>
+            <source media="(min-width: 768px)" srcset="img/cat-skinny-l@1x.png 1x, img/cat-skinny-l@1x.png 2x">
+            <img class="slider__image  slider__image--after" src="img/cat-skinny-s@1x.png"
+              srcset="img/cat-skinny-s@1x.png 2x" alt="кот после курса cat-energy.">
+          </picture>
+        </div>
       </div>
 
       <div class="control">
         <button class="control__button control__button--before" type="button">Было</button>
         <div class="control__scale">
-          <div class="control__bar">
             <button class="control__range">
               <span class="page__hidden">Кнопка слайдера</span>
             </button>
-          </div>
         </div>
         <button class="control__button control__button--after" type="button">Стало</button>
       </div>
