пробует оживить слайдер

--- a/source/index.html
+++ b/source/index.html
@@ -107,7 +107,7 @@
 
 
     <div class="slider">
-      <div class="slider__images">
+      <div class="slider__images" id="slider">
         <div class="slider__image-wrapper slider__image-wrapper--before slider__image-wrapper--active">
           <picture>
             <source media="(min-width: 768px)" srcset="img/cat-fat-l@1x.png 1x, img/cat-fat-l@1x.png 2x">
