вности правки по оптимизации

--- a/source/index.html
+++ b/source/index.html
@@ -112,14 +112,14 @@
           <picture>
             <source media="(min-width: 768px)" srcset="img/cat-fat-l@1x.png 1x, img/cat-fat-l@1x.png 2x">
             <img class="slider__image  slider__image--before" src="img/cat-fat-s@1x.png"
-              srcset="img/cat-fat-s@1x.png 2x" alt="кот до курса cat-energy.">
+              srcset="img/cat-fat-s@1x.png 2x" alt="кот до курса cat-energy." loading="lazy">
           </picture>
         </div>
         <div class="slider__image-wrapper slider__image-wrapper--after">
           <picture>
             <source media="(min-width: 768px)" srcset="img/cat-skinny-l@1x.png 1x, img/cat-skinny-l@1x.png 2x">
             <img class="slider__image  slider__image--after" src="img/cat-skinny-s@1x.png"
-              srcset="img/cat-skinny-s@1x.png 2x" alt="кот после курса cat-energy.">
+              srcset="img/cat-skinny-s@1x.png 2x" alt="кот после курса cat-energy." loading="lazy">
           </picture>
         </div>
       </div>
