--- a/source/form.html
+++ b/source/form.html
@@ -73,16 +73,11 @@
       </ul>
     </fieldset>
 
-    <fieldset class="form-group form-group--comment">
-      <legend class="form-group__legend form-group__legend--comment">Комментарий</legend>
-      <ul class="form-group__list">
-        <li class="form-group__item">
-          <label class="page__hidden" for="person-comment">Расскажите обо всех повАдках кота</label>
-          <textarea class="form-group__input form-group__input--comment" name="person-comment" id="person-comment"
-            placeholder="Расскажите обо всех повАдках кота"></textarea>
-        </li>
-      </ul>
-    </fieldset>
+    <div class="form-group form-group--comment">
+      <label class="form-group__legend form-group__legend--comment" for="person-comment">Комментарий</label>
+      <textarea class="form-group__input form-group__input--comment" name="person-comment" id="person-comment"
+        placeholder="Расскажите обо всех повАдках кота"></textarea>
+    </div>
 
     <fieldset class="form-group form-group--add">
       <legend class="form-group__legend form-group__legend--add ">Дополнительно</legend>
