--- a/source/form.html
+++ b/source/form.html
@@ -37,7 +37,7 @@
         <ul class="form-group__list form-group__list--purpose">
           <li class="form-group__item form-group__item--radio">
             <input class="form-group__radio page__hidden" id="radio-1" type="radio" name="purpose-radio"
-              value="slimming" checked disabled>
+              value="slimming" checked>
             <label class="form-group__label form-group__label--radio" for="radio-1">Похудение</label>
           </li>
           <li class="form-group__item">
@@ -83,7 +83,7 @@
       <legend class="form-group__legend form-group__legend--add ">Дополнительно</legend>
       <ul class="form-group__list form-group__list--add">
         <li class="form-group__item form-group__item--checkbox">
-          <input class="form-group__checkbox page__hidden" type="checkbox" name="sweetener" id="checkbox-1" checked>
+          <input class="form-group__checkbox page__hidden" type="checkbox" name="sweetener" id="checkbox-1" checked disabled>
           <label class="form-group__label form-group__label--checkbox" for="checkbox-1">Сахарозаменитель</label>
         </li>
         <li class="form-group__item form-group__item--checkbox">
