--- a/source/index.html
+++ b/source/index.html
@@ -23,13 +23,13 @@
     <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
       диету! Cat Energy Slim поможет вашему питомцу
       сбросить лишний вес.</p>
-    <a class="program__link" href="#">Каталог slim</a>
+    <a class="program__link" href="javascript:undefined">Каталог slim</a>
   </section>
   <section class="program program--fat">
     <h3 class="program__title program__title--fat">Набор массы</h3>
     <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
       вашему коту нарастить необходимые мышцы!</p>
-    <a class="program__link" href="#">Каталог pro</a>
+    <a class="program__link" href="javascript:undefined">Каталог pro</a>
   </section>
 </article>
 
@@ -59,11 +59,11 @@
         <ul class="demo-cat__list">
           <li class="demo-cat__item">
             <b class="demo-cat__importance">5 кг</b>
-            <p class="demo-cat__description">снижение веса</p>
+            <p class="demo-cat__description demo-cat__description--mass">снижение веса</p>
           </li>
           <li class="demo-cat__item">
             <b class="demo-cat__importance">60 дней</b>
-            <p class="demo-cat__description">затрачено времени</p>
+            <p class="demo-cat__description demo-cat__description--time">затрачено времени</p>
           </li>
         </ul>
         <div class="demo-cat__total">
