--- a/source/index.html
+++ b/source/index.html
@@ -68,7 +68,7 @@
         </ul>
         <div class="demo-cat__total">
           <p class="demo-cat__expenses">Затраты на питание: </p>
-          <span class="demo-cat__cost"> 15000 руб.</span>
+          <span class="demo-cat__cost"> 15 000 руб.</span>
         </div>
       </div>
     </div>
